added rgb to hex converter

--- a/style.css
+++ b/style.css
@@ -51,8 +51,8 @@ td{
 }
 button{
 	background-color:blue;
-	font-size:18px;
-	font-family:Verdana;
+	font-size:20px;
+	font-family:sans-serif;
 	color:white;
 	border:1px solid black;
 	border-radius:15px;
